# Obsidian

./: CMakeLists.txt  main.cpp
core/obsidian/core/: Frame.java
core/obsidian/renderer_3d/utils/: Matrix.java
obsidian/core/: Sprite.java
obsidian/core/utils/: Canvas.java  Graphics.java  Input.java
obsidian/core/utils/graphics/: Coord.java  Matrix.java  Polygon.java
obsidian/renderer_3d/utils/: Camera.java  Mesh.java  Object.java  Renderer.java
obsidian_engine/: core.h
obsidian_engine/include/: includes.h  obsidian.h
obsidian_engine/include/utils/: Camera.h  Font.h  Graphics.h  LightSource.h  Object.h  RenderableObject.h  Shape.h  Texture.h  Vertex.h
obsidian_engine/include/utils/ObjectTypes/: Circle.h  Polygon.h  Triangle.h
obsidian_engine/source/: includes.cpp  obsidian.cpp
obsidian_engine/source/utils/: Graphics.cpp  Object.cpp  Shape.cpp  Texture.cpp
rsc/: test.png~
